--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation libs.androidx.constraintlayout
     implementation libs.androidx.legacy.support.v4
     implementation libs.androidx.activity.ktx
+    implementation libs.androidx.fragment.ktx
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
